# esp32s3-cmsis-dap

./: .gitignore  CMSIS_DAP_TROUBLESHOOTING.md  CMakeLists.txt  PROJECT_SNAPSHOT.md  README.md  sdkconfig.defaults
components/CherryDAP/: CMakeLists.txt  dap_main.c  dap_main.h
components/CherryDAP/CherryUSB/port/dwc2/: usb_dc_dwc2.c
components/CherryDAP/DAP/Config/: DAP_config.h
components/CherryDAP/DAP/Include/: DAP.h
components/CherryDAP/DAP/Source/: DAP.c
components/CherryDAP/projects/esp32s3/main/: DAP_config.h  main.c  port_common.h  usb2uart.c  usb2uart.h
main/: CMakeLists.txt  main.c
